Fix image aspect ratio issue on mobile

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -579,7 +579,7 @@ div.content-wrapper
   .captioned-image
     margin: 20px auto
     text-align: center
-    max-width: none
+    max-width: unset
 
   .timeline
     width: auto
@@ -592,9 +592,9 @@ div.content-wrapper
       width: calc( 100vw - 20px )
 
       img
-        width: 100%
         max-height: 300px
-        max-width: none
+        max-width: 100%
+        width: auto
         margin: 0 auto
 
   .timeline:after
